--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             const messagesEndRef = useRef(null);
             
             // --- API KEY ---
-            const apiKey = ""; 
+            const apiKey = "AIzaSyDddRTsB_y19lCc51OdqXCw9jbAN2k5BAU"; 
 
             const scrollToBottom = () => {
                 messagesEndRef.current?.scrollIntoView({ behavior: "smooth" });
