--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vladimir Impresiones</title>
+    <!-- Estilos y Librerías -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
-    <!-- FIREBASE SDKs -->
+    <!-- FIREBASE (La Nube) -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
 
@@ -26,15 +27,15 @@
         const { useState, useEffect, useRef } = React;
 
         // --- ICONOS ---
-        const IconPrinter = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polyline points="6 9 6 2 18 2 18 9"></polyline><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"></path><rect x="6" y="14" width="12" height="8"></rect></svg>;
+        const IconPrinter = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polyline points="6 9 6 2 18 2 18 9"></polyline><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2-2v5a2 2 0 0 1-2 2h-2"></path><rect x="6" y="14" width="12" height="8"></rect></svg>;
         const IconTruck = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg>;
         const IconSparkles = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L12 3Z"></path></svg>;
-        const IconSend = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>;
         const IconWhatsapp = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>;
         const IconX = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>;
         const IconCard = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><rect x="1" y="4" width="22" height="16" rx="2" ry="2"></rect><line x1="1" y1="10" x2="23" y2="10"></line></svg>;
         const IconUpload = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>;
         const IconCheck = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>;
+        const IconSend = () => <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>;
 
         const VladimirPrintingApp = () => {
             const [isChatOpen, setIsChatOpen] = useState(false);
@@ -53,25 +54,23 @@
             // --- LLAVES ---
             const geminiApiKey = "AIzaSyDddRTsB_y19lCc51OdqXCw9jbAN2k5BAU"; 
             
-            // --- CONFIGURACIÓN FIREBASE (PEGA TUS DATOS AQUÍ ABAJO) ---
+            // --- CONFIGURACIÓN FIREBASE (TUS DATOS REALES) ---
             const firebaseConfig = {
-                apiKey: "AQUI_TU_API_KEY_DE_FIREBASE",
-                authDomain: "TU_PROYECTO.firebaseapp.com",
-                projectId: "TU_PROJECT_ID",
-                storageBucket: "TU_PROYECTO.appspot.com",
-                messagingSenderId: "TUS_NUMEROS",
-                appId: "TU_APP_ID"
+                apiKey: "AIzaSyBsXcW0BClrEqVXg6DE12rrhjAfTU0LQkg",
+                authDomain: "vladimir-impresiones.firebaseapp.com",
+                projectId: "vladimir-impresiones",
+                storageBucket: "vladimir-impresiones.firebasestorage.app",
+                messagingSenderId: "135084932574",
+                appId: "1:135084932574:web:589df38cb9c0667fa4714f"
             };
 
             // Inicializar Firebase
             useEffect(() => {
-                if (firebaseConfig.apiKey !== "AQUI_TU_API_KEY_DE_FIREBASE" && typeof firebase !== 'undefined') {
+                if (typeof firebase !== 'undefined' && !firebase.apps.length) {
                     try {
-                        if (!firebase.apps.length) {
-                            firebase.initializeApp(firebaseConfig);
-                        }
+                        firebase.initializeApp(firebaseConfig);
                     } catch (e) {
-                        console.error("Error init firebase", e);
+                        console.error("Error inicializando Firebase:", e);
                     }
                 }
             }, []);
@@ -79,11 +78,6 @@
             const handleFileUpload = async (e) => {
                 const selectedFile = e.target.files[0];
                 if (!selectedFile) return;
-
-                if (firebaseConfig.apiKey === "AQUI_TU_API_KEY_DE_FIREBASE") {
-                    alert("⚠️ Falta configurar Firebase en el código. Vladimir, revisa el paso 3.");
-                    return;
-                }
 
                 setFile(selectedFile);
                 setUploading(true);
@@ -97,9 +91,9 @@
                     setFileUrl(url);
                     setUploading(false);
                     // Avisar al chat
-                    setMessages(prev => [...prev, { role: 'model', text: `✅ ¡Archivo "${selectedFile.name}" subido con éxito! Ahora puedes darle al botón de WhatsApp para enviármelo.` }]);
+                    setMessages(prev => [...prev, { role: 'model', text: `✅ ¡Archivo "${selectedFile.name}" subido con éxito! Ahora el botón de WhatsApp ya tiene el link.` }]);
                 } catch (error) {
-                    console.error("Error subiendo", error);
+                    console.error("Error subiendo:", error);
                     setUploading(false);
                     alert("Error al subir. Intenta de nuevo.");
                 }
@@ -164,7 +158,7 @@
             const getWhatsappLink = () => {
                 let text = "Hola Vladimir, quiero hacer una cotización/pedido.";
                 if (fileUrl) {
-                    text += ` Aquí está mi archivo para imprimir: ${fileUrl}`;
+                    text += `\n\n📎 *AQUÍ ESTÁ MI ARCHIVO:* ${fileUrl}`;
                 }
                 return `https://wa.me/18497105798?text=${encodeURIComponent(text)}`;
             };
