--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             const messagesEndRef = useRef(null);
             
             // -------------------------------------------------------
-            //  ¡IMPORTANTE! PEGA AQUÍ TU NUEVA CLAVE (LA QUE CREASTE AHORA)
+            //  ¡OJO! PEGA AQUÍ TU NUEVA CLAVE (LA QUE TERMINA EN 9GLU)
             // -------------------------------------------------------
-            const apiKey = "AIzaSyA9LArVr7YHJ1guTyPHm5yV24Bumui9GLU"; 
+            const geminiApiKey = "AIzaSyA9LArVr7YHJ1guTyPHm5yV24Bumui9GLU"; 
 
             const scrollToBottom = () => {
                 messagesEndRef.current?.scrollIntoView({ behavior: "smooth" });
@@ -73,9 +73,9 @@
                         - Doble cara: B/N (+$3), Color ($20/$40).
                     `;
 
-                    // Usamos el modelo ESTÁNDAR gemini-1.5-flash
+                    // Usamos 'gemini-1.5-flash' normal para máxima compatibilidad
                     const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`,
+                        `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${geminiApiKey}`,
                         {
                             method: "POST",
                             headers: { "Content-Type": "application/json" },
@@ -91,7 +91,8 @@
                     let botResponse = "Hubo un error calculando.";
                     if(data.error) {
                         console.error("API Error:", data.error);
-                        botResponse = `⚠️ Error de clave: ${data.error.message}. Revisa que la pegaste bien. Mientras: B/N $10, Color $15.`;
+                        // Mensaje claro si la llave falla
+                        botResponse = `⚠️ Error con la llave: ${data.error.message}.`;
                     } else {
                         botResponse = data.candidates?.[0]?.content?.parts?.[0]?.text || "No entendí, ¿podrías repetir?";
                     }
@@ -253,3 +254,5 @@
     </script>
 </body>
 </html>
+
+
